<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/widgetLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/appwidget_dark_bg_clickable">


    <TextView
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/widget_top_three_label"
        android:textAlignment="viewStart" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/TopThreeWidget.Row">

        <TextView
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:text="@string/widget_rank_first"
            style="@style/TopThreeWidget.Rank" />

        <TextView
            android:id="@+id/widgetFirstPlace"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="1st Place"
            style="@style/TopThreeWidget.Subreddit" />

        <TextView
            android:id="@+id/widgetFirstPlaceViews"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            tools:text="23"
            style="@style/TopThreeWidget.Views" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/TopThreeWidget.Row">

        <TextView
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:text="@string/widget_rank_second"
            style="@style/TopThreeWidget.Rank" />

        <TextView
            android:id="@+id/widgetSecondPlace"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="2nd Place"
            style="@style/TopThreeWidget.Subreddit" />

        <TextView
            android:id="@+id/widgetSecondPlaceViews"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            tools:text="14"
            style="@style/TopThreeWidget.Views" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/TopThreeWidget.Row">

        <TextView
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:text="@string/widget_rank_third"
            style="@style/TopThreeWidget.Rank" />

        <TextView
            android:id="@+id/widgetThirdPlace"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="3rd Place"
            style="@style/TopThreeWidget.Subreddit" />

        <TextView
            android:id="@+id/widgetThirdPlaceViews"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            tools:text="8"
            style="@style/TopThreeWidget.Views" />

    </LinearLayout>


</LinearLayout>